fixed styling on small screns

--- a/src/components/Formula/Formula.css
+++ b/src/components/Formula/Formula.css
@@ -44,12 +44,13 @@
             width:80vw;
             max-width:800px;
             margin:auto;
-            margin:20px auto 80px auto;
+            margin:0px auto 80px auto;
             height:2vw;
         }
         
         .intro-paragraph{
-            font-size:2.5vw;
+            font-size:2vw;
+
             font-weight:200;
             line-height: 1.4;
         }
