--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -52,9 +52,20 @@
         opacity: 0;
         transition: .6s ease all;
     }
+    @media only screen and (max-width: 1100px) {
+        .project-link-container{
+            flex: 1;
+            width:320px;
+            height:320px;
+            margin:0;
+            /* border:1px solid blue; */
+            box-shadow: 2px 2px 2px #bbb;
+            background: #444;  
+    
+        }
+    }
 
-
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
 
         .project-link-link{
             text-decoration: none;
@@ -64,7 +75,7 @@
             flex: 1;
             width:45vw;
             height:45vw;
-            max-width:45w;
+            max-width:45vw;
             max-height:45vw;
             margin:auto;
             /* border:1px solid blue; */
