--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -78,7 +78,7 @@
 }
 
 
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: 900px) {
 
     .project-header-container{
         /* border:1px solid blue; */
